# sentify

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/: main.py
src/app/: flask_app.py
src/app/templates/: index.html
src/config/: config.py  constants.py
src/data/: stock_prices.py
src/data/files/: companies-ranked-by-market-cap.csv  companies_name_to_ticker_symbol.json
src/scrapers/: yahoo_news_scraper.py
src/utils/: action.py  data.py  plot_stock_prices.py  sentiment_analyzer.py  time.py
